--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,8 @@ body {
 #center-page {
     display: block;
     text-align: -webkit-center;
-<<<<<<< HEAD
     height: 233px;
     margin-top: 89px;
-=======
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
     
 }
 
@@ -21,17 +18,14 @@ body {
 }
 
 #top-page {
-<<<<<<< HEAD
     position: fixed;
     top: 0;
     width: 100%;
     display: block;
     font-size: 13px;
     margin: 0 !important;
-=======
-    margin: auto;
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
-    padding: 20px;
+    padding-top: 20px;
+    padding-left: 15px;
     
 }
 
@@ -46,17 +40,24 @@ li {
     float: left;    
 }
 
-<<<<<<< HEAD
 #left-nav {
     display: inline-block;
     margin: auto;
+    font-size: 13px;
     padding-left: 15px;
+    padding-top: 20px;
     opacity: 0.75;
     color: #000;
 }
 
 #right-nav {
+    display: inline;
     float: right;
+    margin: auto;
+    font-size: 13px;
+    padding: 0px 30px;
+    opacity: 0.75;
+    color: #000;
 }
 
 #left-foot {
@@ -65,13 +66,6 @@ li {
 }
 
 #right-foot {
-=======
-#left-bar {
-    float: left;
-}
-
-#right-bar {
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
     float: right;
 }
 
@@ -93,12 +87,17 @@ a:hover {
 #google-profile {
     color: white;
     font-weight: bold;
-<<<<<<< HEAD
     font-size: 13px;
     background-color: #4285f4;
     border: 1px solid #4285f4;
     outline: none;
     padding: 43.344px 28x;
+}
+
+#gmail-images {
+    padding-right: 15px;
+    line-height: normal;
+    display: inline;
 }
 
 #g-apps {
@@ -113,15 +112,8 @@ a:hover {
     opacity: 0.55;
     box-sizing: border-box;
     line-height: normal;
-=======
-    background-color: blue;
-    padding: 0px 12px;
-}
-
-#g-apps {
-    background-image: url(https://web.archive.org/web/20191130234759im_/https://ssl.gstatic.com/gb/images/i1_1967ca6a.png);
-    background-size: 528px 68px;
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
+    padding: 15px;
+    margin: auto;
 }
 
 .main-button {
@@ -148,7 +140,6 @@ a:hover {
 }
 
 img {
-<<<<<<< HEAD
     padding-top: 109px;
     height: 92px;
     width: 272px;
@@ -177,25 +168,6 @@ img {
     width: 100%;
 }
 
-
-=======
-    padding: 109px 0px 0px;
-    height: 92px;
-}
-
-#footer {
-    position: fixed;
-    width: 100%;
-    height: 35px;
-}
-
-#fbar {
-    background: #f2f2f2;
-    line-height: 40px;
-    display: block;
-}
-
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
 #gsearch {
     border: 1px solid #dfe1e5;
     width: 484px;
@@ -204,11 +176,3 @@ img {
     margin: 0 auto;
     border-radius: 8px;
 }
-
-<<<<<<< HEAD
-#gsearch:hover {
-    
-}
-
-=======
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
